# diskonaut-ng

./: .typos.toml  CHANGELOG.md  Cargo.toml  README.md  deny.toml
.github/workflows/: deploy.yml  test.yml
diskonaut/: Cargo.toml
diskonaut/src/: app.rs  error.rs  main.rs
diskonaut/src/app/: mod.rs  tests.rs
diskonaut/src/cli/: mod.rs  tests.rs
diskonaut/src/config/: keybind.rs  mod.rs  tests.rs
diskonaut/src/error/: mod.rs  tests.rs
diskonaut/src/input/: controls.rs  mod.rs  tests.rs
diskonaut/src/messages/: instruction.rs  mod.rs  tests.rs
diskonaut/src/state/: mod.rs  tests.rs
diskonaut/src/tests/cases/: test_utils.rs  ui.rs
diskonaut/src/tests/cases/snapshots/: diskonaut__tests__cases__ui__delete_folder_small_window-7.snap  diskonaut__tests__cases__ui__enter_folder_small_width-4.snap
diskonaut/src/tests/fakes/: fake_output.rs
diskonaut/src/ui/: bottom_line.rs  display.rs  mod.rs  term_too_small.rs
diskonaut/src/ui/grid/: draw_rect.rs  mod.rs  rectangle_grid.rs  tests.rs
diskonaut/src/ui/modals/: confirm_box.rs  error_box.rs  message_box.rs  warning_box.rs
diskonaut/src/ui/title/: mod.rs  tests.rs  title_line.rs  title_telescope.rs
docs/: PLAN.md
example/: config.toml
libdiskonaut/: Cargo.toml
libdiskonaut/src/: error.rs  lib.rs
libdiskonaut/src/format/: mod.rs  tests.rs  truncate.rs
libdiskonaut/src/model/: file_to_delete.rs  mod.rs  tests.rs
libdiskonaut/src/model/files/: file_or_folder.rs  file_tree.rs
libdiskonaut/src/os/: mod.rs  tests.rs  unix.rs  windows.rs
libdiskonaut/src/scan/: mod.rs  tests.rs
libdiskonaut/src/tiles/: area.rs  board.rs  files_in_folder.rs  mod.rs  rect_float.rs  tests.rs  tile.rs  treemap.rs
