[workspace]
members = ["libdiskonaut", "diskonaut"]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT"
homepage = "https://github.com/Gigas002/diskonaut"
description = "Terminal disk space visual navigator"
repository = "https://github.com/Gigas002/diskonaut"
version = "0.11.0"

[workspace.dependencies]
crossterm = "0.17"
failure = "0.1"
filesize = "0.2.0"
insta = "0.16.0"
jwalk = "0.5"
libdiskonaut = { path = "libdiskonaut" }
nix = "0.17.0"
structopt = "0.3"
tui = { version = "0.11", default-features = false, features = ["crossterm"] }
unicode-width = "0.1.7"
winapi = { version = "0.3", features = ["securitybaseapi", "debugapi"] }
