[workspace]
members = ["libdiskonaut", "diskonaut"]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT"
homepage = "https://github.com/Gigas002/diskonaut"
description = "Terminal disk space visual navigator"
repository = "https://github.com/Gigas002/diskonaut"
version = "0.12.2"

[workspace.dependencies]
clap = { version = "4", features = ["derive"] }
jwalk = "0.8"
libdiskonaut = { path = "libdiskonaut" }
rustix = { version = "1", default-features = false, features = ["process"] }
serde = { version = "1", features = ["derive"] }
thiserror = "2"
toml = "1"
ratatui = { version = "0.30", default-features = false, features = ["crossterm"] }
unicode-width = "0.2"
