[package]
name = "diskonaut"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description.workspace = true

[[bin]]
name = "diskonaut"
path = "src/main.rs"

[features]
default = []

[dependencies]
clap = { workspace = true }
crossterm = { workspace = true }
libdiskonaut = { workspace = true }
thiserror = { workspace = true }
ratatui = { workspace = true }
unicode-width = { workspace = true }
