[package]
name = "libdiskonaut"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Disk usage model, treemap layout, and formatting for diskonaut."

[dependencies]
filesize = { workspace = true }
jwalk = { workspace = true }
rustix = { workspace = true }
thiserror = { workspace = true }
unicode-width = { workspace = true }
